<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingLeft="@dimen/horizontal_margin"
              android:paddingRight="@dimen/horizontal_margin">

    <TextView
        android:id="@+id/splash_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/login_logo_placeholder"/>

    <TextView
        android:id="@+id/splash_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/splash_logo"
        android:layout_marginTop="@dimen/vertical_margin_big"
        android:layout_centerHorizontal="true"
        android:text="@string/login_subtitle_placeholder"/>

    <Button
        android:id="@+id/splash_get_started_button"
        style="@style/Theme.Widget.Button.Raised"
        android:theme="@style/Theme.Widget.Button.Primary"
        android:text="@string/login_get_started_label"
        android:layout_below="@+id/splash_subtitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/vertical_margin_normal"/>

</RelativeLayout>