<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alignmentMode="alignBounds"
            android:background="?android:windowBackground"
            android:columnCount="3"
            android:paddingLeft="@dimen/horizontal_margin"
            android:paddingRight="@dimen/horizontal_margin"
            android:paddingTop="@dimen/base_grid_unit"
            android:rowCount="4"
            android:useDefaultMargins="true">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/new_event_title_container"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/new_event_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/calendar_new_event_event_title"
            tools:text="New Event Title"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_gravity="fill_horizontal"
        android:layout_marginTop="@dimen/base_grid_unit"
        android:layout_row="1">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/new_event_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/calendar_new_event_event_description"
            android:maxLines="3"
            android:singleLine="false"
            tools:text="This ia a very important event."/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_marginTop="@dimen/base_grid_unit"
        android:layout_row="2">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/new_event_from_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_arrow_drop_down_black_18dp"
            android:drawableRight="@drawable/ic_arrow_drop_down_black_18dp"
            android:focusable="false"
            android:hint="@string/calendar_new_event_event_from"
            android:inputType="none"
            tools:text="Sunday, 13 March, 2016"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_column="2"
        android:layout_row="2">

        <EditText
            android:id="@+id/new_event_from_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_arrow_drop_down_black_18dp"
            android:drawableRight="@drawable/ic_arrow_drop_down_black_18dp"
            android:focusable="false"
            android:inputType="none"
            tools:text="18:00"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/new_event_to_date_container"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_marginTop="@dimen/base_grid_unit"
        android:layout_row="3">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/new_event_to_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_arrow_drop_down_black_18dp"
            android:drawableRight="@drawable/ic_arrow_drop_down_black_18dp"
            android:focusable="false"
            android:hint="@string/calendar_new_event_event_to"
            android:inputType="none"
            tools:text="Sunday, 13 March, 2016"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_column="2"
        android:layout_row="3">

        <EditText
            android:id="@+id/new_event_to_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_arrow_drop_down_black_18dp"
            android:drawableRight="@drawable/ic_arrow_drop_down_black_18dp"
            android:focusable="false"
            android:inputType="none"
            tools:text="18:30"/>

    </android.support.design.widget.TextInputLayout>

</GridLayout>